# estimation_kinematics_calibration

./: .gitignore  README.md  THIRD_PARTY.md  pyproject.toml
.github/workflows/: cuda.yml
cuda/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
cuda/benchmarks/: profile_replay.py
cuda/docs/: gpu_execution_playbook.md
cuda/notebooks/: README.md  covariance_calibration_playground.ipynb  covariance_calibration_run.ipynb  covariance_tuning_tutorial.ipynb
cuda/src/estimation_calibration_cuda/: README.md  __init__.py  api.py  batched_calibration.py  cli.py  covariance_calibration.py  data.py  data_paths.py  fixed_slot_inekf.py  invariant_ekf.py
cuda/src/estimation_calibration_cuda/_example_data/: dataset_manifest.json  test.npz  train.npz  validation.npz
cuda/tests/: conftest.py  test_api.py  test_data.py  test_data_paths.py  test_gradients.py  test_parity.py  test_release_surface.py  test_synthetic_golden.py  test_training_smoke.py  test_validation_selection.py
cuda/tests/data/: legacy_synthetic_mini_golden.npz
matlab/: README.md
matlab/+legbical/: README.md
matlab/+legbical/+calibration/: README.md
matlab/+legbical/+config/: README.md
matlab/+legbical/+estimation/: README.md
prime/: README.md
prime/g1_prime/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NOTICE.md  README.md  environment.yml  pyproject.toml
prime/g1_prime/configs/: README.md
prime/g1_prime/configs/lower/: h501_template.xml
prime/g1_prime/cpp/: CMakeLists.txt  README.md
prime/g1_prime/cpp/apps/: g1_motion_fie.cpp
prime/g1_prime/cpp/bindings/: g1cal_pybind.cpp
prime/g1_prime/cpp/include/g1cal/: covariance_precision.hpp  motion_arrival_action.hpp  motion_fwddyn_action.hpp  motion_preprocess.hpp  motion_problem.hpp  motion_simulator.hpp  profile_contacts.hpp
prime/g1_prime/cpp/tests/: test_action_parity.cpp  test_common.hpp  test_covariance_cost.cpp  test_dimensions.cpp  test_fd_derivatives.cpp  test_inertia_invariance.cpp  test_sim_parity.cpp
prime/g1_prime/data/: README.md
prime/g1_prime/data/calibrated/: calibration_summary.json  precision.csv  theta.json
prime/g1_prime/data/clips/: PUBLICATION_STATUS.json  README.md
prime/g1_prime/data/clips/run1/: injection.json  prior_state.csv  q_sense.csv  tau_sense.csv  upper_truth_h501.csv  v_sense.csv
prime/g1_prime/data/clips/run1/reference_solution/: contact_diagnostics.csv  f_rollout.csv  provenance.json  reference_manifest.json  request_config.xml  solve_summary.json  us_results_fddp.csv  xs_results_fddp.csv
prime/g1_prime/data/clips/run2/: injection.json  prior_state.csv  q_sense.csv  tau_sense.csv  upper_truth_h501.csv  v_sense.csv
prime/g1_prime/data/clips/run2/reference_solution/: contact_diagnostics.csv  f_rollout.csv  provenance.json  reference_manifest.json  request_config.xml  solve_summary.json  us_results_fddp.csv  xs_results_fddp.csv
prime/g1_prime/models/: MODEL_MANIFEST.json  README.md
prime/g1_prime/models/g1/: NOTICE.md  contact_frames.json
prime/g1_prime/models/g1/urdf/: g1_custom_collision_29dof.urdf
prime/g1_prime/python/: README.md
prime/g1_prime/python/g1cal/: README.md  __init__.py  attempts.py  backend.py  calibration.py  cli.py  covariance.py  gradient.py  horizon_solver.py  loss.py  optimizers.py  paths.py  profiles.py
prime/g1_prime/scripts/: build.sh  verify_release.sh
prime/g1_prime/tests/python/: conftest.py  test_attempts.py  test_calibration_oracle.py  test_cli.py  test_covariance_parameterization.py  test_loss.py  test_optimizers.py
prime/stride_prime/: CMakeLists.txt  README.md  THIRD_PARTY.md  build.sh  environment.yml  run_calibration.py
prime/stride_prime/model/: stride_frost_planar.urdf
prime/stride_prime/native/: README.md  prime_fie.cpp
prime/stride_prime/stride_prime/: README.md  __init__.py  calibration.py  estimator.py  sensitivity.py
prime/stride_prime/tests/: test_prime_fie.py
python/: README.md
python/bilevel/: README.md
python/bilevel/estimator/: README.md
src/matlab/: README.md  estimation_FIE.m  main.m  plot_FIE.m
src/python/: README.md
src/python/bilevel/: __init__.py  calibration.py  codegen.py  config.py  data_io.py  exports.py  kinematics.py  lmo.py  losses.py  models.py  robot.py  run_bilevel.py  sensitivity.py  utils.py
src/python/bilevel/estimator/: __init__.py  full_information.py
src/python/resources/data/b1/: contact_mocap.csv  u_mocap.csv
src/python/resources/robot/: B1.urdf
tests/: run.sh
