[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "estimation-calibration-cuda"
version = "0.2.0"
description = "Torch CPU/CUDA covariance calibration for contact-aided invariant EKF replay."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.15"
dependencies = [
  "numpy>=1.24",
  "torch>=2.11.0"
]

[project.optional-dependencies]
notebooks = [
  "ipykernel>=6",
  "jupyterlab>=4",
  "matplotlib>=3.7"
]
dev = [
  "build>=1",
  "pytest>=8",
  "twine>=6"
]

[project.scripts]
estimation-calibration-cuda = "estimation_calibration_cuda.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
estimation_calibration_cuda = ["_example_data/*.json", "_example_data/*.npz"]

[tool.pytest.ini_options]
markers = [
  "external_data: requires explicitly configured real rollout data",
  "release_cuda: mandatory CUDA release coverage"
]
